desktop.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desktop
  labels:
    app: desktop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: desktop
  template:
    metadata:
      labels:
        app: desktop
    spec:
      containers:
      - name: desktop
        image: volade/desktop:latest
        imagePullPolicy: Always
        ports:
        - name: vnc0
          containerPort: 5900
        - name: vnc1  
          containerPort: 5901
        - name: vnc2  
          containerPort: 5902
        - name: vnc3  
          containerPort: 5903
        - name: jenkins
          containerPort: 8888
        securityContext:
          privileged: true
        resources:
          requests:
            ephemeral-storage: "1Gi"
      - name: novnc
        image: volade/novnc:v3
        ports:
        - name: novnc0
          containerPort: 8080
        - name: novnc1
          containerPort: 8081
        - name: novnc2
          containerPort: 8082
        - name: novnc3
          containerPort: 8083
        resources:
          requests:
            ephemeral-storage: "100Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: desktop
spec:
  type: NodePort
  selector:
    app: desktop
  ports:
  - name: novnc0 
    nodePort: 30000
    port: 80
    targetPort: novnc0
  - name: novnc1
    nodePort: 30001
    port: 81
    targetPort: novnc1
  - name: novnc2
    nodePort: 30002
    port: 82
    targetPort: novnc2
  - name: novnc3
    nodePort: 30003
    port: 83
    targetPort: novnc3
  - name: jenkins
    nodePort: 30888
    port: 8888
    targetPort: jenkins
  externalIPs:
    - 34.75.250.107
