desktop_w_vols3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desktop
  labels:
    app: desktop-jenkins
spec:
  replicas: 2
  selector:
    matchLabels:
      app: desktop-jenkins
  template:
    metadata:
      labels:
        app: desktop-jenkins
    spec:
      volumes:
      - name: desktop-pv
        persistentVolumeClaim:
          claimName: desktop-pvc
      containers:
      - name: desktop
        image: volade/desktop:nojenkins
        resources:
          limits:
            cpu: 500m
            memory: 26214Mi
          requests:
            cpu: 10m
            memory: 190M
        imagePullPolicy: Always
        ports:
        - name: vnc0
          containerPort: 5900
        - name: vnc1  
          containerPort: 5901
        - name: vnc2  
          containerPort: 5902
        - name: vnc3  
          containerPort: 5903
        # - name: jenkins
        #   containerPort: 8888
        securityContext:
          privileged: true
        resources:
          requests:
            ephemeral-storage: "1Gi"
        volumeMounts:
        - name: desktop-pv
          mountPath: "/mnt/work-related"
      - name: novnc
        image: volade/novnc:v3
        ports:
        - name: novnc0
          containerPort: 8080
        - name: novnc1
          containerPort: 8081
        - name: novnc2
          containerPort: 8082
        - name: novnc3
          containerPort: 8083
        resources:
          requests:
            ephemeral-storage: "100Mi"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: desktop-jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: desktop-jenkins
  template:
    metadata:
      labels:
        app: desktop-jenkins
    spec:
      volumes:
      - name: jenkins-pv
        persistentVolumeClaim:
          claimName: jenkins-pvc
      - name: desktop-pv
        persistentVolumeClaim:
          claimName: desktop-pvc
      containers:
      - name: jenkins
        image: volade/jenkins:custom
        imagePullPolicy: Always
        ports:
        - name: jenkins-master
          containerPort: 8080
        - name: jenkins-agent
          containerPort: 50000
        volumeMounts:
        - name: jenkins-pv
          mountPath: "/var/jenkins_home"
        - name: desktop-pv
          mountPath: "/mnt/work-related"
        securityContext:
          privileged: true

---
apiVersion: v1
kind: Service
metadata:
  name: desktop
spec:
  type: LoadBalancer
  selector:
    app: desktop-jenkins
  ports:
  - name: novnc0 
    port: 80
    targetPort: novnc0
  - name: novnc1
    port: 81
    targetPort: novnc1
  - name: novnc2
    port: 82
    targetPort: novnc2
  - name: novnc3
    port: 83
    targetPort: novnc3
  - name: jenkins-master
    port: 8080
    targetPort: jenkins-master
  - name: jenkins-agent
    port: 50000
    targetPort: jenkins-agent
  loadBalancerIP: 34.31.121.238
