nat-config.yml
apiVersion: v1
kind: Namespace
metadata:
  name: calico-system

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: desktop  # add the 'app' label to the service
  name: desktop
  namespace: default  # change the namespace of the service definition
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
