test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80


---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports: 
    - name: test
      protocol: TCP
      port: 80
      targetPort: 80
  allocateLoadBalancerNodePorts: false
  loadBalancerIP: 34.31.121.238 
    # status:
    # loadBalancer:
    # ingress:
    # - ip: 104.197.203.64
