nginx-ingress-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: desktop-ingress
  annotations:
    ingressClassName: "nginx"
spec:
  rules:
    - host: desktop.quest   # Replace with your external IP address
      http:
        paths:
          - path: /nginx     # Path for port 80
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
