nginx-ingress-test2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: desktop-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: 104.197.203.64
spec:
  rules:
    - host: desktop.quest
      http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /port2
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8081
